.provarCaches/00D5f000005vwGkEAI/objects/rstk__poconctr__c.object
<CustomObject>
    <description>poconctr__c; BOC</description>
    <fields>
        <fullName>rstk__externalid__c</fullName>
        <externalId>true</externalId>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>External ID</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstk__formula_extid__c</fullName>
        <formula>rstk__poconctr_div__r.rstk__sydiv_div__c +  rstk__poconctr_name__c</formula>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__formula_name__c</fullName>
        <formula>rstk__poconctr_name__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poconctr_city__c</fullName>
        <inlineHelpText>The city in which this Consolidation Center resides.</inlineHelpText>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poconctr_contact__c</fullName>
        <inlineHelpText>The contact name used for this Consolidation Center.</inlineHelpText>
        <label>Contact</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poconctr_country__c</fullName>
        <inlineHelpText>The country in which this Consolidation Center resides.</inlineHelpText>
        <label>Country</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poconctr_div__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <inlineHelpText>The Division for which this record pertains.</inlineHelpText>
        <label>Division</label>
        <referenceTo>rstk__sydiv__c</referenceTo>
        <relationshipLabel>Consolidation Center</relationshipLabel>
        <relationshipName>divpoconctr</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>rstk__poconctr_email__c</fullName>
        <inlineHelpText>The email address for the contact used for this Consolidation Center.</inlineHelpText>
        <label>Contact Email Address</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>rstk__poconctr_isocountry__c</fullName>
        <description>poconctr_isocountry__c</description>
        <label>ISO Country Codes</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>rstk__ISO_Country_Codes</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__poconctr_ltexpedite__c</fullName>
        <inlineHelpText>The expedited lead time from the consolidation center to it&apos;s next destination.</inlineHelpText>
        <label>Transit Lead Time - Expedite</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poconctr_ltstandard__c</fullName>
        <inlineHelpText>The lead time from the consolidation center to it&apos;s next destination.</inlineHelpText>
        <label>Transit Lead Time - Standard</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstk__poconctr_name__c</fullName>
        <inlineHelpText>The identifying name for this Consolidation Center.</inlineHelpText>
        <label>Consolidation Center Name</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poconctr_phone__c</fullName>
        <inlineHelpText>The phone number for the contact used for this Consolidation Center.</inlineHelpText>
        <label>Contact Phone Number</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poconctr_state__c</fullName>
        <inlineHelpText>The state or province in which this Consolidation Center resides.</inlineHelpText>
        <label>State / Province</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__poconctr_street__c</fullName>
        <inlineHelpText>The street address of this Consolidation Center.</inlineHelpText>
        <label>Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>rstk__poconctr_type__c</fullName>
        <inlineHelpText>This field defines the type of products handled by this Consolidation Center .  The choices are Chemical, Gas or Both.</inlineHelpText>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Chemical</fullName>
                </value>
                <value>
                    <fullName>Gas</fullName>
                </value>
                <value>
                    <fullName>Both</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>rstk__poconctr_zip__c</fullName>
        <inlineHelpText>The zip code or postal code of this Consolidation Center.</inlineHelpText>
        <label>Zip / Postal Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__searchindex__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstk__triggeroptions__c</fullName>
        <inlineHelpText>Not Applicable</inlineHelpText>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Consolidation Center</label>
    <listViews>
        <fullName>rstk__RS_Consolidation_Centers</fullName>
        <columns>NAME</columns>
        <columns>rstk__poconctr_div__c</columns>
        <columns>rstk__poconctr_name__c</columns>
        <columns>rstk__poconctr_type__c</columns>
        <columns>rstk__poconctr_street__c</columns>
        <columns>rstk__poconctr_city__c</columns>
        <columns>rstk__poconctr_state__c</columns>
        <columns>rstk__poconctr_zip__c</columns>
        <columns>rstk__poconctr_country__c</columns>
        <columns>rstk__poconctr_contact__c</columns>
        <columns>rstk__poconctr_email__c</columns>
        <columns>rstk__poconctr_phone__c</columns>
        <columns>LAST_UPDATE</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>Consolidation Centers</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Consolidation Center</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>rstk__Verify_Transit_Lead_Time_Expedite</fullName>
        <active>true</active>
        <description>Verify value in Transit Lead Time Expedite</description>
        <errorConditionFormula>ISBLANK( rstk__poconctr_ltexpedite__c ) ||
rstk__poconctr_ltexpedite__c &lt;=  0</errorConditionFormula>
        <errorMessage>Invalid Value for Transit Lead Time - Expedite</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>rstk__Verify_Transit_Lead_Time_Standard</fullName>
        <active>true</active>
        <description>Verify value in Transit Lead Time Standard</description>
        <errorConditionFormula>ISBLANK( rstk__poconctr_ltstandard__c ) ||
rstk__poconctr_ltstandard__c &lt;= 0</errorConditionFormula>
        <errorMessage>Invalid Value for Transit Lead Time - Standard</errorMessage>
    </validationRules>
</CustomObject>